Fix font family whitespace warning in CSS testing. Update TESTING.md with result

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,7 @@ header h1 {
 }
 
 #mission-statement h3 {
-    font-family: "Homemade Apple", san serif;
+    font-family: "Homemade Apple", sans-serif;
     color: #fff;
     font-size: 2.5em;
     text-align: center;
@@ -294,7 +294,7 @@ header h1 {
     padding: 0;
     font-size: 30px;
     text-align: center;
-    font-family: "Homemade Apple", san serif;
+    font-family: "Homemade Apple", sans-serif;
     color: #34a0a4;
 }
 
@@ -308,7 +308,7 @@ header h1 {
     padding: 10px;
     font-size: 30px;
     text-align: center;
-    font-family: "Homemade Apple", san serif;
+    font-family: "Homemade Apple", sans-serif;
     color: #34a0a4;
 }
 
@@ -359,7 +359,7 @@ header h1 {
 
 #opening-times li {
     list-style-type: none;
-    font-family: Montserrat, san serif;
+    font-family: Montserrat, sans-serif;
     padding: 0;
 }
 
